@@ -1,3 +1,8 @@
+2008-08-30  Glenn Morris  <rgm@gnu.org>
+
+	* apropos.el (apropos-command): Ignore documentation errors.
+	* help-fns.el (describe-function-1): Handle broken aliases.  (Bug#825)
+
 2008-08-29  Chong Yidong  <cyd@stupidchicken.com>
 
 	* isearch.el (isearch-highlight-regexp): Fix case of highlighted
